:lipstick:fixed #app overflow

--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ body {
 
 #app {
   padding: 2rem;
+  width: 100%;
   max-width: 100rem;
   text-align: center;
 }
